# oewn-site

./: .gitignore  Cargo.toml  README.md  create_synset.vue.py
src/: hbs.rs  main.rs  negotiation.rs  robots.txt  wordnet.rs
src/hbs/: html.hbs  rdfxml.hbs  sitemap.hbs  ttl-header.hbs  ttl.hbs  xml.hbs
vue/: index.html  package.json  vite.config.js
vue/src/: App.vue  main.js
vue/src/assets/: main.css
vue/src/components/: Wordnet.vue  corpus.vue  downloads.vue  editor.vue  subcat.vue  synset.vue  synset_search.vue
