[package]
name = "oewn-site"
version = "0.1.0"
authors = ["John McCrae <john@mccr.ae>"]
edition = "2021"

[dependencies]
rocket = "0.5.1"
clap = { version = "4.5.20", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
indicatif = "0.17.8"
thiserror = "2.0.3"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
once_cell = "1.20.2"
handlebars = "6.2.0"
redb = "2.2.0"
speedy = "0.8.7"
